[package]
name = "stream-ws-web-client-example-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.87"
gloo = "0.10.0"
stream-ws = { path = "../../../", default-features = false, features = ["gloo"] }
wasm-bindgen-futures = "0.4.37"
futures = "0.3.28"
js-sys = "0.3.64"
